@@ -1,5 +1,6 @@
-package com.example.demo.service;
+package com.example.demo.service.Position;
 
+import jakarta.transaction.Transactional;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
@@ -13,13 +14,16 @@ import com.example.demo.repository.IPositionRepository;
 //import com.example.demo.repository.PermissionRepository;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
-public class PositionService {
+public class PositionService implements IPositionService {
     IPositionRepository positionRepository;
     PositionMapper positionMapper;
+    @Override
     public PositionResponse create(PositionRequest request){
         Position n = new Position();
         n.setName(request.getPositionName());
@@ -27,11 +31,26 @@ public class PositionService {
         PositionResponse positionResponse = positionMapper.toPositionResponse(savedPosition);
         return positionResponse;
     }
-    public List<PositionResponse> getAll(){
+    // fix get all
+    @Override
+    public List<PositionResponse> getAll() {
         return positionRepository.findAll()
-                .stream().map(positionMapper::toPositionResponse).toList();
+                .stream()
+                .map(positionMapper::toPositionResponse) // Map to PositionResponse
+                .collect(Collectors.toList());
     }
+    @Override
     public void delete(Long position){
         positionRepository.deleteById(position);
+    }
+    @Transactional
+    @Override
+    public Optional<Position> findById(Long id) {
+        return positionRepository.findById(id); // Assuming positionRepository is already defined.
+    }
+
+
+    public Position save(Position position) {
+        return positionRepository.save(position);
     }
 }
